# 13_stop_cyberviolence

./: .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  README.md  agent.html  azure-pipelines.yml  chainlit.html  cloud_configuration.html  custom_feedback.html  custom_feedback.qmd  datalayer.html  datalayer.qmd  deployment.html  environment.yml  extend_doc.html  index.html  local_dev.html  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.devcontainer/: chainlit_devcontainer.Dockerfile  devcontainer.json
.github/workflows/: build_quarto_docs.yaml  chainlit_frontend_trigger.yaml  chainlit_frontend_trigger_build_container.yaml  chainlit_frontend_trigger_debug.yaml  pre-commit.yaml  render-qmd.yml
agents/monster_context/: ateliers_jeunes_complete.html
chatbot/: README.md  __init__.py  _quarto.yaml  app.py  ateliers_jeunes_complete.md  chainlit.md  chainlit_app.py  chainlit_dev.Dockerfile  chatbot.qmd  chatbot_deploy.Dockerfile  chatbot_reqs.txt  docker_call  fr-FR.json  pyproject_merge_with_old pyproject.toml  pyproject_old_version.toml  requirements.txt
chatbot/.files/16c21b81-ea53-413c-bcfc-75800b204090/: cd942501-a916-4a09-adfe-e44248d3a40e.json
chatbot/.quarto/idx/: chainlit.md.json  chatbot.qmd.json
chatbot/.quarto/xref/: INDEX  ea6c9b81  eba9fdea
chatbot/agents/: __init__.py  agent1_system_prompt  service1.py
chatbot/agents/archive/: agent1_system_prompt  service1.py
chatbot/agents/context_collector/: required_context_questions.py
chatbot/agents/monster_context/: ateliers_jeunes_complete.md  doc_tools.py  pdf_tools.py
chatbot/chainlit_config/: config.toml
chatbot/deployment/: README.md  chainlit_dev.Dockerfile  chatbot_deploy.Dockerfile  python_uv_node.Dockerfile
chatbot/doc/: _quarto.yaml  agent.qmd  cloud_configuration.qmd  custom_feedback.qmd  datalayer.qmd  deployment.qmd  doc.qmd  extend_doc.qmd  index.qmd  local_dev.qmd  update_last_modified.py
chatbot/public/: stylesheet.css
chatbot/rag/: __init__.py  alim_rag.ipynb  chroma_client.py  chroma_collection.py
chatbot/utils/: __init__.py  content.py  llm.py  ui.py
data_analyse/: data_model_v1.drawio  fake_data_generation.ipynb  fake_data_generation_date_unique.ipynb  import_clean_dim_tables.ipynb  jointure_fichier_csv.py  table_wide_creation.ipynb  table_wide_creation.py
data_analyse/Source1/: Explications Traitements pour dataSource.md  Source1_recuperation.ipynb  source1cyberviolences_environment.yml
data_analyse/comparables/: comparables.ipynb  tools.py
data_analyse/data/: DIM_CLASSE.csv  DIM_ELEVE.csv  DIM_ENSEIGNANT.csv  DIM_ETABLISSEMENT.csv  DIM_PARENT.csv  DIM_QUESTION.csv  DIM_REPONSE.csv  DIM_SCORE.csv  FACT_REPONSE.csv  ISQ_code_geo_20250618.csv  REFERENTIEL_QUESTIONS.xlsx  jointure_fichier_csv.py  jointure_table.sql
data_analyse/power_bi/: BarometreCyberviolence_VersionTravail.pbix  Design.pptx  stopCyberViolence.json
rag/: alim_rag.html
site_libs/bootstrap/: bootstrap.min.css
src/: doc.html
(+39 files in other folders)
