[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "stop-cyberviolences"
version = "0.1.0"
description = "Stop Cyberviolences Project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "mistralai>=1.5.0",
    "streamlit>=1.42.0",
    "aiohttp>=3.11.12",
    "anyio>=4.8.0",
    "argon2-cffi>=23.1.0",
    "beautifulsoup4>=4.13.3",
    "bleach>=6.2.0",
    "certifi>=2025.1.31",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "cryptography>=43.0.3",
    "dataclasses-json>=0.6.7",
    "fastjsonschema>=2.21.1",
    "fire>=0.7.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "jinja2>=3.1.5",
    "jsonschema>=4.23.0",
    "jupyterlab>=4.3.5",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.34",
    "langchain-openai>=0.3.4",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.2.70",
    "langgraph-checkpoint>=2.0.10",
    "langgraph-checkpoint-sqlite>=2.0.3",
    "langsmith>=0.3.7",
    "markdown-it-py>=3.0.0",
    "matplotlib-inline>=0.1.7",
    "mistune>=3.1.1",
    "msgpack>=1.1.0",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "orjson>=3.10.15",
    "packaging>=24.2",
    "platformdirs>=4.3.6",
    "prometheus_client>=0.21.1",
    "prompt_toolkit>=3.0.50",
    "psutil>=6.1.1",
    "pycparser>=2.22",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pygments>=2.19.1",
    "PyJWT>=2.10.1",
    "PyPDF2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "rich>=13.9.4",
    "sse-starlette>=2.1.3",
    "SQLAlchemy>=2.0.38",
    "starlette>=0.45.3",
    "structlog>=24.4.0",
    "tavily-python>=0.5.1",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "tornado>=6.4.2",
    "traitlets>=5.14.3",
    "types-python-dateutil>=2.9.0.20241206",
    "typing_extensions>=4.12.2",
    "uri-template>=1.3.0",
    "urllib3>=2.3.0",
    "uvicorn>=0.34.0",
    "watchfiles>=1.0.4",
    "webcolors>=24.11.1",
    "webencodings>=0.5.1",
    "websocket-client>=1.8.0",
    "yarl>=1.18.3",
    "zstandard>=0.23.0"
]

[tool.poetry]
name = "stop-cyberviolences"
version = "0.1.0"
description = "Stop Cyberviolences Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0" 

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "B"]
ignore = ["E501", "F403", "F405", "E722"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^_"
mccabe = { max-complexity = 10 }

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
tox = "^4.4.8"
